pqrs/IaC/backend/co_pqrs_back_doble_cobro/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: co-pqrs-back-doble-cobro
  labels:
    app: co-pqrs-back-doble-cobro
    app.kubernetes.io/name: co-pqrs-back-doble-cobro
    app.kubernetes.io/part-of: backend
    app.kubernetes.io/component: backend-doble-cobro
    app.kubernetes.io/version: v1
    app.openshift.io/runtime: python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: co-pqrs-back-doble-cobro
  template:
    metadata:
      labels:
        app: co-pqrs-back-doble-cobro
        app.kubernetes.io/name: co-pqrs-back-doble-cobro
        app.kubernetes.io/part-of: backend
        app.kubernetes.io/component: backend-doble-cobro
        app.kubernetes.io/version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8006"
    spec:
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      enableServiceLinks: false

      containers:
        - name: back-doble-cobro
          image: quay.apps.work.ocp.co.igrupobbva/pqr-genai/co_pqrs_back_doble_cobro:1.0.2
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8006
              protocol: TCP

          volumeMounts:
            - name: conf-pqr-env
              mountPath: /app/.env
              subPath: .env

          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 5

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: "150m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

      volumes:
        - name: conf-pqr-env
          configMap:
            name: conf-pqr-doblecobro-env
